Fix blurred image display

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -615,7 +615,7 @@ input::-webkit-inner-spin-button {
   .guest-buttons {
     margin-right: 2rem;
     margin-left: 1rem;
-    
+
   }
 
   .btn--purple {
@@ -1825,6 +1825,7 @@ input::-webkit-inner-spin-button {
       display: flex;
       justify-content: center;
     }
+
     .infinite-scroll-component {
       width: 100%;
       display: flex;
@@ -1931,7 +1932,7 @@ input::-webkit-inner-spin-button {
       bottom: 1.5rem;
     }
 
-    
+
     textarea {
       border-radius: 10px;
       border: 2px solid #D8DCE3;
@@ -2929,7 +2930,7 @@ input::-webkit-inner-spin-button {
 
   .link-container {
     display: flex;
-    
+
   }
 
   a {
@@ -3092,6 +3093,7 @@ input::-webkit-inner-spin-button {
   .post-content {
     display: flex;
     justify-content: center;
+
     .post-text {
       height: fit-content;
       width: 100%;
@@ -3142,9 +3144,11 @@ input::-webkit-inner-spin-button {
       z-index: 1000;
 
       .zoom-background-image {
-        width: 200vw;
+        width: 100%;
+        height: 100%;
         -webkit-filter: blur(1.5rem) brightness(90%);
         filter: blur(1.5rem) brightness(90%);
+        object-fit: cover;
       }
 
     }
@@ -4402,9 +4406,12 @@ input::-webkit-inner-spin-button {
     z-index: 1000;
 
     .zoom-background-image {
-      width: 200vw;
+      width: 100%;
+      height: 100%;  
       -webkit-filter: blur(1.5rem) brightness(90%);
       filter: blur(1.5rem) brightness(90%);
+      object-fit: cover;
+
     }
   }
 
@@ -4423,8 +4430,8 @@ input::-webkit-inner-spin-button {
     cursor: pointer;
 
     img {
-      width: clamp(30rem, 100vw, 80rem);
-      height: clamp(30rem, 100vh, 50rem);
+      width: clamp(15rem, 100vw, 80rem);
+      height: clamp(15rem, 100vh, 50rem);
       object-fit: contain;
     }
   }
@@ -4624,6 +4631,7 @@ input::-webkit-inner-spin-button {
       }
     }
   }
+
   .emoji-picker {
     position: absolute;
     bottom: 4rem;
@@ -4913,7 +4921,7 @@ input::-webkit-inner-spin-button {
           }
         }
 
-        
+
       }
 
       .list-card-item-time-message {
@@ -5378,18 +5386,22 @@ input::-webkit-inner-spin-button {
     path {
       fill: #e4e6eb;
     }
+
     circle {
       stroke: #e4e6eb;
     }
   }
+
   .emoji-icon {
     path {
       fill: #e4e6eb;
     }
+
     circle {
       stroke: #e4e6eb;
     }
   }
+
   .toaster {
     border-radius: 10000px;
     background-color: $darker;
@@ -5487,10 +5499,12 @@ input::-webkit-inner-spin-button {
       stroke: #e4e6eb;
     }
   }
+
   .collapsible__item:hover {
     transition: 0.2s;
     background-color: $dark;
   }
+
   .search-card {
     transition: 0.3s;
     background-color: #242526;
@@ -5911,6 +5925,7 @@ input::-webkit-inner-spin-button {
           border: $darker;
         }
       }
+
       .send-button {
         background-color: transparent;
 
